# AethelDB

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  rust-toolchain.toml  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
aethelctl/: Cargo.toml
aethelctl/console/: index.html
aethelctl/src/: databases.rs  deploy.rs  lib.rs  main.rs  serve.rs
aethelctl/tests/: control_plane.rs
common/: Cargo.toml
common/src/: error.rs  ids.rs  lib.rs  lsn.rs  metrics.rs  page.rs  page_service.rs  telemetry.rs  wal_service.rs
common/tests/: metrics.rs
compute/: Dockerfile  Makefile  README.md  entrypoint.sh  postgresql.compute.conf  verify-local.sh
compute/extension/aethel_smgr/: Makefile  aethel_smgr--1.0.sql  aethel_smgr.c  aethel_smgr.control
compute/patches/: 0001-smgr-pluggable.patch  0002-wal-redo-mode.patch  README.md
compute/walredo/: Makefile  README.md  test_real_redo.py  verify.sh  walredo.c
deploy/: Dockerfile.rust  README.md
deploy/helm/: README.md
deploy/helm/aetheldb/: Chart.yaml  values.yaml
deploy/helm/aetheldb/templates/: NOTES.txt  _helpers.tpl  autoscaling.yaml  pageserver.yaml  pgbouncer.yaml  proxy-rbac.yaml  proxy.yaml  safekeeper.yaml  secret.yaml
deploy/k8s/: compute-example.yaml  kustomization.yaml  minio.yaml  namespace.yaml  pageserver.yaml  pgbouncer.yaml  proxy-rbac.yaml  proxy.yaml  safekeeper.yaml  verify-activator.sh
deploy/monitoring/: README.md  docker-compose.monitoring.yml  postgres-exporter.md  prometheus.yml
deploy/monitoring/grafana/: dashboards.yml  datasources.yml
deploy/monitoring/grafana/dashboards/: aetheldb.json
deploy/pooling/: README.md  k8s-demo.yaml  verify-pooling-k8s.sh  verify-pooling.sh
docs/: comparison.md  world-class.md
docs/design/: branching.md  compaction-gc.md  k8s-activator.md  multi-tenancy.md  observability.md  proxy-tls.md  safekeeper-replication.md  wal-redo.md
e2e-tests/: README.md  mock_compute.py  protocol.py  requirements.txt  test_e2e_lifecycle.py  test_lifecycle.py
pageserver/: Cargo.toml
pageserver/src/: catalog.rs  control.rs  httpapi.rs  layer.rs  lib.rs  main.rs  metrics.rs  objstore.rs  offload.rs  page.rs  repository.rs  server.rs  tenant.rs  tenant_manager.rs  timeline.rs  waldecode.rs  walreceiver.rs  walredo.rs  walredo_process.rs  walredo_proto.rs
pageserver/tests/: branching_e2e.rs  catalog_persistence.rs  control_auth.rs  httpapi.rs  integration.rs  objstore_cloud.rs  per_branch_ingest.rs  s3.rs  walreceiver.rs  walredo_process.rs
proxy/: Cargo.toml
proxy/src/: activator.rs  cancel.rs  control.rs  idle.rs  k8s.rs  lib.rs  main.rs  metrics.rs  protocol.rs  proxy.rs  scram.rs  tenant.rs  tls.rs
proxy/tests/: integration.rs  scram_gate.rs  tls.rs
safekeeper/: Cargo.toml
safekeeper/src/: consensus.rs  lib.rs  main.rs  metrics.rs  replicator.rs  server.rs  storage.rs
safekeeper/tests/: integration.rs
