# SPDX-License-Identifier: Apache-2.0
# Copyright 2026 The AethelDB Authors

[package]
name = "aethelctl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Command-line interface for AethelDB: control plane (tenants, branches, PITR, GC) and cloud deploy."

[lib]
name = "aethelctl"
path = "src/lib.rs"

[[bin]]
name = "aethelctl"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = "1"
# Small blocking HTTP client — a CLI doesn't need an async runtime.
ureq = { version = "2.9", features = ["json"] }
# Embed the Helm chart into the binary so `aethelctl deploy` works anywhere.
include_dir = "0.7"
# Tiny blocking HTTP server for the `aethelctl serve` web console.
tiny_http = "0.12"
# Stable hash to derive a tenant id from a friendly database name.
sha2 = "0.10"

[dev-dependencies]
# Integration tests drive a real page-server HTTP control plane in-process.
tokio = { workspace = true }
pageserver = { path = "../pageserver" }
