# SPDX-License-Identifier: Apache-2.0
# Copyright 2026 The AethelDB Authors

[package]
name = "common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared wire types (LSN, tenant/timeline IDs, page keys) for AethelDB."

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
# Operational metrics: a shared Prometheus registry + a tiny /metrics server.
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
prometheus = { version = "0.13", default-features = false }
