# SPDX-License-Identifier: Apache-2.0
# Copyright 2026 The AethelDB Authors

[package]
name = "pageserver"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Log-structured page reconstruction and S3 offload service for AethelDB."

[lib]
name = "pageserver"
path = "src/lib.rs"

[[bin]]
name = "aethel-pageserver"
path = "src/main.rs"

[dependencies]
common = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
# End-to-end WAL-receiver test drives a real safekeeper. Dev-only; safekeeper
# does not depend on pageserver, so there is no dependency cycle.
safekeeper = { path = "../safekeeper" }
