# SPDX-License-Identifier: Apache-2.0
# Copyright 2026 The AethelDB Authors

[package]
name = "pageserver"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Log-structured page reconstruction and S3 offload service for AethelDB."

[lib]
name = "pageserver"
path = "src/lib.rs"

[[bin]]
name = "aethel-pageserver"
path = "src/main.rs"

# Reference wal-redo process (toy apply semantics) used by the redo tests and
# as the executable spec of the wal-redo pipe protocol.
[[bin]]
name = "aethel-walredo-mock"
path = "src/bin/aethel-walredo-mock.rs"

[dependencies]
common = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
async-trait = { workspace = true }
# Real S3-compatible object store (MinIO / AWS S3) behind the ObjectStore trait.
object_store = { version = "0.11", features = ["aws"] }
futures = "0.3"

[dev-dependencies]
tokio = { workspace = true }
# End-to-end WAL-receiver test drives a real safekeeper. Dev-only; safekeeper
# does not depend on pageserver, so there is no dependency cycle.
safekeeper = { path = "../safekeeper" }
