# SPDX-License-Identifier: Apache-2.0
# Copyright 2026 The AethelDB Authors

[package]
name = "pageserver"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Log-structured page reconstruction and S3 offload service for AethelDB."

[lib]
name = "pageserver"
path = "src/lib.rs"

[[bin]]
name = "aethel-pageserver"
path = "src/main.rs"

# Reference wal-redo process (toy apply semantics) used by the redo tests and
# as the executable spec of the wal-redo pipe protocol.
[[bin]]
name = "aethel-walredo-mock"
path = "src/bin/aethel-walredo-mock.rs"

[dependencies]
common = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
async-trait = { workspace = true }
prometheus = { version = "0.13", default-features = false }
once_cell = "1"
# JSON bodies for the HTTP control-plane API.
serde = { workspace = true }
serde_json = "1"
# Decompress full-page images compressed by PostgreSQL (lz4 / zstd; pglz is
# implemented inline). PG uses the raw block formats.
lz4_flex = { version = "0.11", default-features = false, features = ["std"] }
zstd = "0.13"
# Object storage behind the ObjectStore trait: AWS S3 / MinIO, Azure Blob, and
# Google Cloud Storage — so one binary deploys to any cloud.
object_store = { version = "0.11", features = ["aws", "azure", "gcp"] }
futures = "0.3"

[features]
# Export OTLP traces (delegates to common's otlp feature).
otlp = ["common/otlp"]

[dev-dependencies]
tokio = { workspace = true }
# End-to-end WAL-receiver test drives a real safekeeper. Dev-only; safekeeper
# does not depend on pageserver, so there is no dependency cycle.
safekeeper = { path = "../safekeeper" }

[[bin]]
name = "aethel-basebackup-import"
path = "src/bin/aethel-basebackup-import.rs"
