# SPDX-License-Identifier: Apache-2.0
# Copyright 2026 The AethelDB Authors

[package]
name = "proxy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Scale-to-zero activation proxy: wakes compute on connect, sleeps it when idle."

# The crate is both a library (so the proxy internals can be integration-tested)
# and the `aethel-proxy` binary that wires those internals to a CLI.
[lib]
name = "proxy"
path = "src/lib.rs"

[[bin]]
name = "aethel-proxy"
path = "src/main.rs"

[dependencies]
common = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
async-trait = { workspace = true }
prometheus = { version = "0.13", default-features = false }
once_cell = "1"
# TLS termination for client connections (SSLRequest -> rustls handshake).
# Pin the crypto backend to ring to keep the build dependency-light.
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
rustls-pemfile = "2"
# Proxy-side SCRAM-SHA-256 authentication (reject bad creds before cold-start).
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
rand = "0.8"

[dev-dependencies]
# The integration tests drive the proxy over real sockets.
tokio = { workspace = true }
# Generate a self-signed cert and connect as a TLS client in the TLS test.
rcgen = { version = "0.13", default-features = false, features = ["ring", "pem"] }
