# SPDX-License-Identifier: Apache-2.0
# Copyright 2026 The AethelDB Authors

[package]
name = "safekeeper"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Durable, consensus-backed WAL ingest buffer for AethelDB."

[lib]
name = "safekeeper"
path = "src/lib.rs"

[[bin]]
name = "aethel-safekeeper"
path = "src/main.rs"

[dependencies]
common = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
